--- a/nllb-200-distilled-600m.ipynb
+++ b/nllb-200-distilled-600m.ipynb
@@ -74,50 +74,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Found cached dataset json (/home/juhwan/.cache/huggingface/datasets/json/default-495f2ce9a157e059/0.0.0/fe5dd6ea2639a6df622901539cb550cf8797e5a6b2dd7af1cf934bed8e233e6e)\n",
-      "100%|██████████| 1/1 [00:00<00:00, 25.63it/s]\n",
-      "Loading cached split indices for dataset at /home/juhwan/.cache/huggingface/datasets/json/default-495f2ce9a157e059/0.0.0/fe5dd6ea2639a6df622901539cb550cf8797e5a6b2dd7af1cf934bed8e233e6e/cache-9703b2b7b7ffbf1d.arrow and /home/juhwan/.cache/huggingface/datasets/json/default-495f2ce9a157e059/0.0.0/fe5dd6ea2639a6df622901539cb550cf8797e5a6b2dd7af1cf934bed8e233e6e/cache-a1f820f7c9740879.arrow\n",
-      "Map:   0%|          | 0/1080276 [00:00<?, ? examples/s]/data/juhwan/nlp-task-translation-en-ko/.venv/lib/python3.8/site-packages/transformers/tokenization_utils_base.py:3596: UserWarning: `as_target_tokenizer` is deprecated and will be removed in v5 of Transformers. You can tokenize your labels by using the argument `text_target` of the regular `__call__` method (either in the same call as your input texts if you use the same keyword arguments, or in a separate call.\n",
-      "  warnings.warn(\n",
-      "Map:  74%|███████▎  | 796000/1080276 [01:01<00:18, 15610.90 examples/s]"
+      "Loading cached processed dataset at /home/juhwan/.cache/huggingface/datasets/json/default-495f2ce9a157e059/0.0.0/fe5dd6ea2639a6df622901539cb550cf8797e5a6b2dd7af1cf934bed8e233e6e/cache-84125edccc2b13a4.arrow\n"
      ]
     }
    ],
    "source": [
-    "# dataset\n",
-    "from datasets import load_dataset\n",
-    "dataset = load_dataset('json', data_files='./일상생활및구어체_영한_train_set.json', field='data')\n",
-    "\n",
-    "split_datasets = dataset[\"train\"].train_test_split(train_size=0.9, seed=20)\n",
-    "split_datasets[\"validation\"] = split_datasets.pop(\"test\")\n",
-    "\n",
-    "# declare preprocessing code \n",
-    "\n",
-    "max_input_length = 128\n",
-    "max_target_length = 128\n",
-    "\n",
-    "def preprocess_function(examples):\n",
-    "    inputs = examples['ko']\n",
-    "    targets = examples['en']\n",
-    "\n",
-    "    model_inputs = tokenizer(inputs, max_length=max_input_length, truncation=True)\n",
-    "\n",
-    "    # 타겟을 위한 토크나이저 셋업\n",
-    "    with tokenizer.as_target_tokenizer():\n",
-    "        labels = tokenizer(targets, max_length=max_target_length, truncation=True)\n",
-    "\n",
-    "    model_inputs[\"labels\"] = labels[\"input_ids\"]\n",
-    "    return model_inputs            \n",
-    "\n",
-    "\n",
-    "\n",
     "tokenized_datasets = split_datasets.map(\n",
     "    preprocess_function,\n",
     "    batched=True,\n",
@@ -127,20 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tokenized_datasets = split_datasets.map(\n",
-    "    preprocess_function,\n",
-    "    batched=True,\n",
-    "    remove_columns=split_datasets[\"train\"].column_names,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,16 +104,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_34718/1787450467.py:1: FutureWarning: load_metric is deprecated and will be removed in the next major version of datasets. Use 'evaluate.load' instead, from the new library 🤗 Evaluate: https://huggingface.co/docs/evaluate\n",
+      "  metric = load_metric(\"bleu\")\n"
+     ]
+    }
+   ],
    "source": [
     "metric = load_metric(\"bleu\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,9 +202,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You're using a NllbTokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n",
+      "/data/juhwan/nlp-task-translation-en-ko/.venv/lib/python3.8/site-packages/transformers/generation/utils.py:1219: UserWarning: You have modified the pretrained model configuration to control generation. This is a deprecated strategy to control generation and will be removed soon, in a future version. Please use a generation configuration file (see https://huggingface.co/docs/transformers/main_classes/text_generation)\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='212' max='1876' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [ 212/1876 08:32 < 1:07:17, 0.41 it/s]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# 학습하기전 초기모델 점수\n",
     "trainer.evaluate(max_length=max_target_length)"
@@ -263,6 +255,13 @@
    "source": [
     "trainer.evaluate(max_length=max_target_length)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
