--- a/nllb-200-distilled-600m.ipynb
+++ b/nllb-200-distilled-600m.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,26 +35,27 @@
     "model_checkpoint = \"facebook/nllb-200-distilled-600M\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_checkpoint, src_lang='kor_Hang', tgt_lang='eng_Latn')\n",
     "model = AutoModelForSeq2SeqLM.from_pretrained(model_checkpoint)\n",
-    "model.config.decoder_start_token_id = tokenizer.convert_tokens_to_ids('eng_Latn')\n"
+    "model.config.forced_bos_token_id = tokenizer.convert_tokens_to_ids('eng_Latn')\n",
+    "# model.config.bos_token_id = tokenizer.convert_tokens_to_ids('eng_Latn')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Found cached dataset json (/home/juhwan/.cache/huggingface/datasets/json/default-495f2ce9a157e059/0.0.0/fe5dd6ea2639a6df622901539cb550cf8797e5a6b2dd7af1cf934bed8e233e6e)\n",
-      "100%|██████████| 1/1 [00:00<00:00, 25.53it/s]\n",
-      "Loading cached split indices for dataset at /home/juhwan/.cache/huggingface/datasets/json/default-495f2ce9a157e059/0.0.0/fe5dd6ea2639a6df622901539cb550cf8797e5a6b2dd7af1cf934bed8e233e6e/cache-9703b2b7b7ffbf1d.arrow and /home/juhwan/.cache/huggingface/datasets/json/default-495f2ce9a157e059/0.0.0/fe5dd6ea2639a6df622901539cb550cf8797e5a6b2dd7af1cf934bed8e233e6e/cache-a1f820f7c9740879.arrow\n"
+      "Found cached dataset json (/home/juhwan/.cache/huggingface/datasets/json/default-3c8e71bae241100f/0.0.0/fe5dd6ea2639a6df622901539cb550cf8797e5a6b2dd7af1cf934bed8e233e6e)\n",
+      "100%|██████████| 1/1 [00:00<00:00, 24.85it/s]\n",
+      "Loading cached split indices for dataset at /home/juhwan/.cache/huggingface/datasets/json/default-3c8e71bae241100f/0.0.0/fe5dd6ea2639a6df622901539cb550cf8797e5a6b2dd7af1cf934bed8e233e6e/cache-0e94f1019394202e.arrow and /home/juhwan/.cache/huggingface/datasets/json/default-3c8e71bae241100f/0.0.0/fe5dd6ea2639a6df622901539cb550cf8797e5a6b2dd7af1cf934bed8e233e6e/cache-f8893aa3fa6006a7.arrow\n"
      ]
     }
    ],
    "source": [
-    "dataset = load_dataset('json', data_files='./일상생활및구어체_영한_train_set.json', field='data')\n",
+    "dataset = load_dataset('json', data_files='./ai_hub/1.Training/원천데이터/일상생활및구어체_한영_train_set.json', field='data')\n",
     "\n",
     "split_datasets = dataset[\"train\"].train_test_split(train_size=0.9, seed=20)\n",
     "split_datasets[\"validation\"] = split_datasets.pop(\"test\")\n",
@@ -74,14 +75,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading cached processed dataset at /home/juhwan/.cache/huggingface/datasets/json/default-495f2ce9a157e059/0.0.0/fe5dd6ea2639a6df622901539cb550cf8797e5a6b2dd7af1cf934bed8e233e6e/cache-84125edccc2b13a4.arrow\n"
+      "Loading cached processed dataset at /home/juhwan/.cache/huggingface/datasets/json/default-3c8e71bae241100f/0.0.0/fe5dd6ea2639a6df622901539cb550cf8797e5a6b2dd7af1cf934bed8e233e6e/cache-42da862947ade6a5.arrow\n",
+      "Loading cached processed dataset at /home/juhwan/.cache/huggingface/datasets/json/default-3c8e71bae241100f/0.0.0/fe5dd6ea2639a6df622901539cb550cf8797e5a6b2dd7af1cf934bed8e233e6e/cache-b72a71f3b5c6901b.arrow\n"
      ]
     }
    ],
@@ -95,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,25 +106,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_34718/1787450467.py:1: FutureWarning: load_metric is deprecated and will be removed in the next major version of datasets. Use 'evaluate.load' instead, from the new library 🤗 Evaluate: https://huggingface.co/docs/evaluate\n",
-      "  metric = load_metric(\"bleu\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "metric = load_metric(\"bleu\")"
+    "metric = load_metric(\"sacrebleu\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,8 +139,6 @@
     "\n",
     "    \n",
     "    decoded_preds, decoded_labels = postprocess_text(decoded_preds, decoded_labels)\n",
-    "\n",
-    "    print(decoded_preds, decoded_labels)\n",
     "    \n",
     "    result = metric.compute(predictions=decoded_preds, references=decoded_labels)\n",
     "    result = {\"bleu\": result[\"score\"]}\n",
@@ -161,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +193,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'食事はレストランだけでできるのか?'"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# # Testing\n",
+    "# article = split_datasets['validation'][0]['ko']\n",
+    "# inputs = tokenizer(article, return_tensors='pt')\n",
+    "\n",
+    "# model.to('cpu')\n",
+    "# translated_tokens = model.generate(\n",
+    "#     # **inputs, forced_bos_token_id=tokenizer.lang_code_to_id[\"eng_Latn\"], max_length=30\n",
+    "#     **inputs, max_length=30\n",
+    "# )\n",
+    "\n",
+    "\n",
+    "# tokenizer.batch_decode(translated_tokens,  skip_special_tokens=True)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -220,8 +242,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='212' max='1876' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [ 212/1876 08:32 < 1:07:17, 0.41 it/s]\n",
+       "      <progress value='1875' max='1875' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [1875/1875 45:03]\n",
        "    </div>\n",
        "    "
       ],
@@ -231,6 +253,21 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'eval_loss': 1.4868464469909668,\n",
+       " 'eval_bleu': 26.5843,\n",
+       " 'eval_gen_len': 16.7345,\n",
+       " 'eval_runtime': 2733.1555,\n",
+       " 'eval_samples_per_second': 43.905,\n",
+       " 'eval_steps_per_second': 0.686}"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -240,9 +277,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='2' max='101250' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [     2/101250 : < :, Epoch 0.00/3]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Step</th>\n",
+       "      <th>Training Loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "trainer.train()"
    ]
@@ -255,6 +320,12 @@
    "source": [
     "trainer.evaluate(max_length=max_target_length)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
