--- a/helsinki-nlp-opus-mt-ko-en.ipynb
+++ b/helsinki-nlp-opus-mt-ko-en.ipynb
@@ -4,6 +4,18 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "# Set the CUDA_VISIBLE_DEVICES environment variable\n",
+    "#export CUDA_VISIBLE_DEVICES=0\n",
+    "os.environ['CUDA_VISIBLE_DEVICES'] = '0'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -20,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +40,8 @@
      "output_type": "stream",
      "text": [
       "/data/juhwan/nlp-task-translation-en-ko/.venv/lib/python3.8/site-packages/transformers/models/marian/tokenization_marian.py:194: UserWarning: Recommended: pip install sacremoses.\n",
-      "  warnings.warn(\"Recommended: pip install sacremoses.\")\n"
+      "  warnings.warn(\"Recommended: pip install sacremoses.\")\n",
+      "Downloading (…)neration_config.json: 100%|██████████| 293/293 [00:00<00:00, 28.9kB/s]\n"
      ]
     }
    ],
@@ -42,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +64,7 @@
        "'2.0.0+cu117'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,15 +76,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading and preparing dataset json/default to /home/juhwan/.cache/huggingface/datasets/json/default-3c8e71bae241100f/0.0.0/fe5dd6ea2639a6df622901539cb550cf8797e5a6b2dd7af1cf934bed8e233e6e...\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Found cached dataset json (/home/juhwan/.cache/huggingface/datasets/json/default-23e8ad3d1a915c98/0.0.0/fe5dd6ea2639a6df622901539cb550cf8797e5a6b2dd7af1cf934bed8e233e6e)\n",
-      "100%|██████████| 1/1 [00:00<00:00, 13.25it/s]\n"
+      "Downloading data files: 100%|██████████| 1/1 [00:00<00:00, 3088.59it/s]\n",
+      "Extracting data files: 100%|██████████| 1/1 [00:00<00:00, 799.07it/s]\n",
+      "                                                                     \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset json downloaded and prepared to /home/juhwan/.cache/huggingface/datasets/json/default-3c8e71bae241100f/0.0.0/fe5dd6ea2639a6df622901539cb550cf8797e5a6b2dd7af1cf934bed8e233e6e. Subsequent calls will reuse this data.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:00<00:00, 26.76it/s]\n"
      ]
     }
    ],
@@ -79,22 +114,14 @@
     "# dataset\n",
     "from datasets import load_dataset\n",
     "\n",
-    "dataset = load_dataset('json', data_files='./일상생활및구어체_영한_train_set.json', field='data')"
+    "dataset = load_dataset('json', data_files='./ai_hub/1.Training/원천데이터/일상생활및구어체_한영_train_set.json', field='data')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading cached split indices for dataset at /home/juhwan/.cache/huggingface/datasets/json/default-23e8ad3d1a915c98/0.0.0/fe5dd6ea2639a6df622901539cb550cf8797e5a6b2dd7af1cf934bed8e233e6e/cache-cfd229826466e59a.arrow and /home/juhwan/.cache/huggingface/datasets/json/default-23e8ad3d1a915c98/0.0.0/fe5dd6ea2639a6df622901539cb550cf8797e5a6b2dd7af1cf934bed8e233e6e/cache-61c3fa9b299534e5.arrow\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "split_datasets = dataset[\"train\"].train_test_split(train_size=0.9, seed=20)\n",
     "split_datasets[\"validation\"] = split_datasets.pop(\"test\")"
@@ -102,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,15 +154,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading cached processed dataset at /home/juhwan/.cache/huggingface/datasets/json/default-23e8ad3d1a915c98/0.0.0/fe5dd6ea2639a6df622901539cb550cf8797e5a6b2dd7af1cf934bed8e233e6e/cache-88111a08c390f2b4.arrow\n",
-      "Loading cached processed dataset at /home/juhwan/.cache/huggingface/datasets/json/default-23e8ad3d1a915c98/0.0.0/fe5dd6ea2639a6df622901539cb550cf8797e5a6b2dd7af1cf934bed8e233e6e/cache-3ac33a9c4b7e49d2.arrow\n"
+      "Map:   0%|          | 0/1080000 [00:00<?, ? examples/s]/data/juhwan/nlp-task-translation-en-ko/.venv/lib/python3.8/site-packages/transformers/tokenization_utils_base.py:3596: UserWarning: `as_target_tokenizer` is deprecated and will be removed in v5 of Transformers. You can tokenize your labels by using the argument `text_target` of the regular `__call__` method (either in the same call as your input texts if you use the same keyword arguments, or in a separate call.\n",
+      "  warnings.warn(\n",
+      "                                                                       \r"
      ]
     }
    ],
@@ -149,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,18 +187,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_1263/3063495125.py:2: FutureWarning: load_metric is deprecated and will be removed in the next major version of datasets. Use 'evaluate.load' instead, from the new library 🤗 Evaluate: https://huggingface.co/docs/evaluate\n",
-      "  metric = load_metric(\"sacrebleu\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datasets import load_metric\n",
     "metric = load_metric(\"sacrebleu\")"
@@ -178,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,25 +269,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/data/juhwan/nlp-task-translation-en-ko/.venv/lib/python3.8/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
-      "  warnings.warn('Was asked to gather along dimension 0, but all '\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='470' max='469' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [469/469 3:21:39]\n",
+       "      <progress value='1876' max='1875' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [1875/1875 4:22:25]\n",
        "    </div>\n",
        "    "
       ],
@@ -282,65 +293,11 @@
     {
      "data": {
       "text/plain": [
-       "{'eval_loss': 1.6437932252883911,\n",
-       " 'eval_bleu': 23.463732945313037,\n",
-       " 'eval_runtime': 4407.0119,\n",
-       " 'eval_samples_per_second': 27.236,\n",
-       " 'eval_steps_per_second': 0.106}"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 학습하기전 초기모델 점수\n",
-    "trainer.evaluate(max_length=max_target_length)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/data/juhwan/nlp-task-translation-en-ko/.venv/lib/python3.8/site-packages/transformers/optimization.py:391: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "TrainOutput(global_step=25320, training_loss=1.1216386442500834, metrics={'train_runtime': 7640.2382, 'train_samples_per_second': 424.179, 'train_steps_per_second': 3.314, 'total_flos': 2.7898742048292864e+16, 'train_loss': 1.1216386442500834, 'epoch': 3.0})"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "trainer.train()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'eval_loss': 1.0371508598327637,\n",
-       " 'eval_bleu': 36.032725201690134,\n",
-       " 'eval_runtime': 2768.7492,\n",
-       " 'eval_samples_per_second': 43.352,\n",
-       " 'eval_steps_per_second': 0.169,\n",
-       " 'epoch': 3.0}"
+       "{'eval_loss': 1.700509786605835,\n",
+       " 'eval_bleu': 19.12530451763208,\n",
+       " 'eval_runtime': 7044.9731,\n",
+       " 'eval_samples_per_second': 17.033,\n",
+       " 'eval_steps_per_second': 0.266}"
       ]
      },
      "execution_count": 15,
@@ -349,6 +306,7 @@
     }
    ],
    "source": [
+    "# 학습하기전 초기모델 점수\n",
     "trainer.evaluate(max_length=max_target_length)"
    ]
   },
@@ -361,14 +319,50 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/data/juhwan/nlp-task-translation-en-ko/.venv/lib/python3.8/site-packages/transformers/models/marian/tokenization_marian.py:194: UserWarning: Recommended: pip install sacremoses.\n",
-      "  warnings.warn(\"Recommended: pip install sacremoses.\")\n"
+      "/data/juhwan/nlp-task-translation-en-ko/.venv/lib/python3.8/site-packages/transformers/optimization.py:391: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
+      "  warnings.warn(\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='2' max='101250' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [     2/101250 : < :, Epoch 0.00/3]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Step</th>\n",
+       "      <th>Training Loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=101250, training_loss=0.8536538732458044, metrics={'train_runtime': 8704.5092, 'train_samples_per_second': 372.221, 'train_steps_per_second': 11.632, 'total_flos': 2.768806582891315e+16, 'train_loss': 0.8536538732458044, 'epoch': 3.0})"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from transformers import pipeline\n",
-    "translator = pipeline('translation', model=model_checkpoint)"
+    "trainer.train()"
    ]
   },
   {
@@ -379,7 +373,12 @@
     {
      "data": {
       "text/plain": [
-       "[{'translation_text': 'I want beef.'}]"
+       "{'eval_loss': 0.7568225264549255,\n",
+       " 'eval_bleu': 52.00317662422721,\n",
+       " 'eval_runtime': 3684.4244,\n",
+       " 'eval_samples_per_second': 32.57,\n",
+       " 'eval_steps_per_second': 0.509,\n",
+       " 'epoch': 3.0}"
       ]
      },
      "execution_count": 17,
@@ -388,7 +387,7 @@
     }
    ],
    "source": [
-    "translator('나는 불고기가 먹고 싶어.')"
+    "trainer.evaluate(max_length=max_target_length)"
    ]
   },
   {
