--- a/nllb-200-distilled-600m.ipynb
+++ b/nllb-200-distilled-600m.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,13 +35,12 @@
     "model_checkpoint = \"facebook/nllb-200-distilled-600M\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_checkpoint, src_lang='kor_Hang', tgt_lang='eng_Latn')\n",
     "model = AutoModelForSeq2SeqLM.from_pretrained(model_checkpoint)\n",
-    "model.config.forced_bos_token_id = tokenizer.convert_tokens_to_ids('eng_Latn')\n",
-    "# model.config.bos_token_id = tokenizer.convert_tokens_to_ids('eng_Latn')"
+    "model.config.forced_bos_token_id = tokenizer.convert_tokens_to_ids('eng_Latn')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +48,7 @@
      "output_type": "stream",
      "text": [
       "Found cached dataset json (/home/juhwan/.cache/huggingface/datasets/json/default-3c8e71bae241100f/0.0.0/fe5dd6ea2639a6df622901539cb550cf8797e5a6b2dd7af1cf934bed8e233e6e)\n",
-      "100%|██████████| 1/1 [00:00<00:00, 24.85it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 24.30it/s]\n",
       "Loading cached split indices for dataset at /home/juhwan/.cache/huggingface/datasets/json/default-3c8e71bae241100f/0.0.0/fe5dd6ea2639a6df622901539cb550cf8797e5a6b2dd7af1cf934bed8e233e6e/cache-0e94f1019394202e.arrow and /home/juhwan/.cache/huggingface/datasets/json/default-3c8e71bae241100f/0.0.0/fe5dd6ea2639a6df622901539cb550cf8797e5a6b2dd7af1cf934bed8e233e6e/cache-f8893aa3fa6006a7.arrow\n"
      ]
     }
@@ -75,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,16 +105,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_22101/2163898601.py:1: FutureWarning: load_metric is deprecated and will be removed in the next major version of datasets. Use 'evaluate.load' instead, from the new library 🤗 Evaluate: https://huggingface.co/docs/evaluate\n",
+      "  metric = load_metric(\"sacrebleu\")\n"
+     ]
+    }
+   ],
    "source": [
     "metric = load_metric(\"sacrebleu\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,20 +201,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'食事はレストランだけでできるのか?'"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # Testing\n",
     "# article = split_datasets['validation'][0]['ko']\n",
@@ -224,16 +221,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 학습하기전 초기모델 점수\n",
+    "trainer.evaluate(max_length=max_target_length)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "You're using a NllbTokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n",
-      "/data/juhwan/nlp-task-translation-en-ko/.venv/lib/python3.8/site-packages/transformers/generation/utils.py:1219: UserWarning: You have modified the pretrained model configuration to control generation. This is a deprecated strategy to control generation and will be removed soon, in a future version. Please use a generation configuration file (see https://huggingface.co/docs/transformers/main_classes/text_generation)\n",
-      "  warnings.warn(\n"
+      "/data/juhwan/nlp-task-translation-en-ko/.venv/lib/python3.8/site-packages/transformers/optimization.py:391: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
+      "  warnings.warn(\n",
+      "You're using a NllbTokenizerFast tokenizer. Please note that with a fast tokenizer, using the `__call__` method is faster than using a method to encode the text followed by a call to the `pad` method to get a padded encoding.\n"
      ]
     },
     {
@@ -242,52 +249,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='1875' max='1875' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [1875/1875 45:03]\n",
-       "    </div>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'eval_loss': 1.4868464469909668,\n",
-       " 'eval_bleu': 26.5843,\n",
-       " 'eval_gen_len': 16.7345,\n",
-       " 'eval_runtime': 2733.1555,\n",
-       " 'eval_samples_per_second': 43.905,\n",
-       " 'eval_steps_per_second': 0.686}"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 학습하기전 초기모델 점수\n",
-    "trainer.evaluate(max_length=max_target_length)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='2' max='101250' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [     2/101250 : < :, Epoch 0.00/3]\n",
+       "      <progress value='16' max='101250' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [    16/101250 00:03 < 6:11:36, 4.54 it/s, Epoch 0.00/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -306,6 +269,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=101250, training_loss=0.660163680314429, metrics={'train_runtime': 20157.4848, 'train_samples_per_second': 160.734, 'train_steps_per_second': 5.023, 'total_flos': 2.355118534070108e+17, 'train_loss': 0.660163680314429, 'epoch': 3.0})"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -314,18 +287,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'eval_loss': 0.5843349099159241,\n",
+       " 'eval_bleu': 53.1581,\n",
+       " 'eval_gen_len': 16.602,\n",
+       " 'eval_runtime': 1770.7684,\n",
+       " 'eval_samples_per_second': 67.767,\n",
+       " 'eval_steps_per_second': 1.059,\n",
+       " 'epoch': 3.0}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "trainer.evaluate(max_length=max_target_length)"
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"I'm a very scary person, and you're being threatened.\""
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# # Testing\n",
+    "# article = split_datasets['validation'][0]['ko']\n",
+    "# inputs = tokenizer(article, return_tensors='pt')\n",
+    "\n",
+    "# model.to('cpu')\n",
+    "# translated_tokens = model.generate(\n",
+    "#     # **inputs, forced_bos_token_id=tokenizer.lang_code_to_id[\"eng_Latn\"], max_length=30\n",
+    "#     **inputs, max_length=30\n",
+    "# )\n",
+    "\n",
+    "\n",
+    "# tokenizer.batch_decode(translated_tokens,  skip_special_tokens=True)[0]\n",
+    "article = '나는 굉장히 무서운 사람이고, 너는 협박을 당하고 있어'\n",
+    "inputs = tokenizer(article, return_tensors='pt')\n",
+    "inputs.to('cuda')\n",
+    "trainer.model.to('cuda')\n",
+    "\n",
+    "outputs = trainer.model.generate(**inputs, max_length=30)\n",
+    "tokenizer.decode(outputs[0], skip_special_tokens=True)"
+   ]
   },
   {
    "cell_type": "code",
